state our conclusion

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -794,6 +794,9 @@ of a previously larger disk from the \sourcei-BN interaction
 the disk re-settled into its current apparently smooth state.  This scenario
 implies that the observable state of NaCl and KCl is very short lived, as these
 molecules are in the process of depleting onto grains.
+While plausible, there are many processes that need to coincide perfectly
+in this scenario (disk temperature history, gas density, gas-phase formation
+rates), so we favor the dust destruction hypothesis.
 
 
 %(1) the dust is totally vaporized, so the salts are in the gas phase.  This is
