Updates from ShareLaTeX

--- a/extracted.bib
+++ b/extracted.bib
@@ -1079,3 +1079,19 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{VanderTak2007,
+   author = {{van der Tak}, F.~F.~S. and {Black}, J.~H. and {Sch{\"o}ier}, F.~L. and 
+	{Jansen}, D.~J. and {van Dishoeck}, E.~F.},
+    title = "{A computer program for fast non-LTE analysis of interstellar line spectra. With diagnostic plots to interpret observed line intensity ratios}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {0704.0155},
+ keywords = {radiative transfer, methods: numerical, radio lines: ISM, infrared: ISM, submillimeter},
+     year = 2007,
+    month = jun,
+   volume = 468,
+    pages = {627-635},
+      doi = {10.1051/0004-6361:20066820},
+   adsurl = {http://adsabs.harvard.edu/abs/2007A%26A...468..627V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
