--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -471,11 +471,19 @@ Below, we explore several mechanisms for the observed line excitation:
 provided a Fortran code to compute those rates.  Typical collision rate coefficients for
 \hbox{$\Delta$J=1} or \hbox{$\Delta$J=2} transitions are $10^{-10}$~cm$^3$ \pers.  Making the usual
 assumption that the collision rates with \hh are similar to those for He, we used
-RADEX \citep{Vandertak2007} to examine the excitation [footnote: the RADEX-compatible molecular data
-file incorporating these coefficients is available from ....?].
-For T=100 K, $\delta v=1$ \kms \perpc, $X_{NaCl}=10^{-10}$ \rlp{presumably,
+RADEX \citep{Vandertak2007} to examine the excitation \footnote{The
+RADEX-compatible molecular data
+file incorporating these coefficients is available from
+\url{https://github.com/keflavich/SaltyDisk/blob/\githash/nacl.dat}}.
+For T=100 K, $\delta v=1$ \kms \perpc, $X_{NaCl}=10^{-10}$,
+\footnote{\rlp{presumably,
 the fractional abundance doesn't matter when one is computing critical density;
-giving this value will create confusion; the linewidth also is questionable}, the
+giving this value will create confusion; the linewidth also is questionable}
+\ag{The fractional abundance relative to the collision partner does matter,
+and the velocity gradient affects the optical depth.  These are fiducial,
+poorly-justified parameters, but I think they're a good first guess.}
+}
+the
 `effective density' at which the lines become detectable is $n\sim10^{6} + 
 10^{2v}$ \percc, where $v$ is the vibrational state quantum number.  The critical
 density is roughly two orders of magnitude higher for each progressively
