add dipole moments & references

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -483,17 +483,17 @@ giving this value will create confusion; the linewidth also is questionable}
 and the velocity gradient affects the optical depth.  These are fiducial,
 poorly-justified parameters, but I think they're a good first guess.}
 }
-the
-`effective density' at which the lines become detectable is $n\sim10^{6} + 
-10^{2v}$ \percc, where $v$ is the vibrational state quantum number.  The critical
-density is roughly two orders of magnitude higher for each progressively
-higher vibrational state.  While the collision coefficients do not extend
-to $v=6$, extrapolation indicates that \hh densities
-$n\gtrsim10^{18}$ \percc would be required to collisionally excite the $v=6$ lines.
+the `effective density' at which the lines become detectable is $n\sim10^{6} +
+10^{2v}$ \percc, where $v$ is the vibrational state quantum number.  The
+critical density is roughly two orders of magnitude higher for each
+progressively higher vibrational state.  While the collision coefficients do
+not extend to $v=6$, extrapolation indicates that \hh densities
+$n\gtrsim10^{18}$ \percc would be required to collisionally excite the $v=6$
+lines.
 
 \par{\textbf{(2) Collisional excitation by electrons.}} 
 Because NaCl and KCl are extremely polar molecules, with dipole moments of
-9 and 10 Debye, respectively \rlp{exact values, and references, here?}, 
+9.1 and 10.3 Debye, respectively \citep{Barton2014a}, 
 collisions with electrons could also be important.
 Using the approximations from \citet{Dickinson1975a}, we find that collision
 rates between both NaCl and KCl and electrons in the J=5-50 v=0 states are
