--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -492,75 +492,41 @@ $n\gtrsim10^{18}$ \percc would be required to collisionally excite the $v=6$
 lines.
 
 \par{\textbf{(2) Collisional excitation by electrons.}} 
-Because NaCl and KCl are extremely polar molecules, with dipole moments of
-9.1 and 10.3 Debye, respectively \citep{Barton2014a}, 
-collisions with electrons could also be important.
-Using the approximations from \citet{Dickinson1975a}, we find that collision
-rates between both NaCl and KCl and electrons in the J=5-50 v=0 states are
-$C\approx10^{-5}$ cm$^{3}$ \pers.  Thus, electrons are $10^5$ times as
-efficient at exciting these molecules than \hh. In typical
-low-mass disks, ionization fractions $X_e \geq 10^{-4}$ occur in the upper layers
-of the disk, where some UV radiation is able to ionize H and C % to H+ and C+
-\citep{Bergin2007a}.  Collisions with electrons would dominate the excitation of
-the salt lines in such regions.  However, deeper into the disks only X-rays and cosmic
-rays can penetrate, resulting in fractional ionizations $X_e < 10^{-6}$,
-too small for electron collisions to be relevant. 
+Because NaCl and KCl are extremely polar molecules, with dipole moments of 9.1
+and 10.3 Debye, respectively \citep{Barton2014a}, collisions with electrons
+could also be important.  Using the approximations from \citet{Dickinson1975a},
+we find that collision rates between both NaCl and KCl and electrons in the
+J=5-50 v=0 states are $C\approx10^{-5}$ cm$^{3}$ \pers.  Thus, electrons are
+$10^5$ times as efficient at exciting these molecules than \hh. In typical
+low-mass disks, ionization fractions $X_e \geq 10^{-4}$ occur in the upper
+layers of the disk, where some UV radiation is able to ionize H and C
+\citep{Bergin2007a}.  Collisions with electrons would dominate the excitation
+of the salt lines in such regions.  However, deeper into the disks only X-rays
+and cosmic rays can penetrate, resulting in fractional ionizations $X_e <
+10^{-6}$, too small for electron collisions to be relevant. 
 
-The low rotational temperatures that we infer seem to rule out both \hh and electron
-collisional excitation of excited vibrational states, since a collision rate high enough
-to excite these vibrational levels would quickly thermalize their rotational ladders 
-at high temperatures.
+The low rotational temperatures that we infer seem to rule out both \hh and
+electron collisional excitation of excited vibrational states, since a
+collision rate high enough to excite these vibrational levels would quickly
+thermalize their rotational ladders at high temperatures.
 
-%The declining brightness with rising rotational quantum number rules out both \hh and electron
-%collisional excitation for the vibrational states, as any density high enough
-%to excite vibrational states would thermalize the rotational levels.
-
-% We assume the collisional constants for NaCl are the same as those for SiS,
-% which has a similar molecular weight, meaning the collisional constants are
-% $C\sim10^{-10}$--$10^{-14}$ cm$^{-3}$ \pers \citep{Dayou2006a}. 
-% The Einstein A-values for the rotational transitions we observe are in the
-% range $A\sim10^{-2}$ -- $10^{-1}$ \pers \rlp{some of the A-coefficients are smaller;
-% for example, 3e-4 for the NaCl line at 89.149 GHZ}
-% Dividing these implies the density must be $n\sim A/C \gtrsim10^8$ \percc.
-% These high densities imply that the salt emission is coming from
-% somewhere in the disk, as we see in the peak intensity images. 
-
-% With only $\leq4$ rotational transitions fitted in each vibrational
-% state, we cannot rule out the alternative possibility that the rotational
-% states are sub-thermally populated.  In this case, the measured rotational
-% temperature would be an upper limit and the implied density would be
-% $n<10^{10}$ \percc (where we use the higher end of the range above to obtain a
-% more conservative upper limit). 
-% However, Figure \ref{fig:sioonnacl} hints
-% that the disk emission region is indeed at a very high density: SiO v=0 is
-% seen at high elevations above the disk, while SiO v=5 is seen only at elevations
-% similar to NaCl; the difference
 
 \par{\textbf{(3) Infrared excitation.}} 
 The observed emission from vibrationally excited states suggests the
 presence of a significant radiation field at 25-45 \um, which covers the range
 of $\Delta v=1$ rovibrational transitions with $v\leq6$ (for NaCl, the range is
 25-35 \um, for KCl, it is 35-45 \um).  Since the selection rules for these
-transitions require that $\Delta v=1$ [footnote: Einstein A-values for the 
+transitions require that $\Delta v=1$ \footnote{Einstein A-values for the 
 $\Delta v=2$ transitions are $\sim100$ times smaller than for the $\Delta v=1$
-transitions, for which $A\sim1$ \pers], the radiation density must be high
+transitions, for which $A\sim1$ \pers.}, the radiation density must be high
 enough to maintain a large population in the $v=1,
 2, 3, 4, 5$ states such that some fraction of photons are able to excite
 molecules to still higher states.  Such a strong radiation field would
 be expected to thermalize the rotational ladders within each vibrational
 state to the same high temperature, which is not observed.
 
-% The vibrational emission lines therefore
-% imply an \emph{upper} limit on the density $n<A/C\sim10^{10}$ \percc, since if
-% the collision rate were faster than the spontaneous emission rate, the higher
-% excited states would be collisionally deexcited without emitting photons.
 
-% This scenario is plausible, but it raises a question: if the radiation field is
-% strong enough to produce similar intensities across the v=0 to v=6 vibrational
-% states, why have the rotational states not reached equilibrium with the radiation
-% field?
-
-\par{\textbf{(3) Ultraviolet excitation.}}
+\par{\textbf{(4) Ultraviolet excitation.}}
 % In this model, collisions and infrared radiation can be ignored.  Instead,
 % higher-energy photons are responsible for the excitation.  In order to directly
 % excite the higher observed vibrationally excited states ($v\geq6$), 5 micron or
