--- a/extracted.bib
+++ b/extracted.bib
@@ -857,6 +857,56 @@
   doi =           {10.1146/annurev.astro.45.071206.100404},
 }
 
+@article{Kaplan2017a,
+  author =        {{Kaplan}, K.~F. and {Dinerstein}, H.~L. and {Oh}, H. and
+                   {Mace}, G.~N. and {Kim}, H. and {Sokal}, K.~R. and
+                   {Pavel}, M.~D. and {Lee}, S. and {Pak}, S. and
+                   {Park}, C. and {Sok Oh}, J. and {Jaffe}, D.~T.},
+  journal =       {\apj},
+  month =         apr,
+  pages =         {152},
+  title =         {{Excitation of Molecular Hydrogen in the Orion Bar
+                   Photodissociation Region from a Deep Near-infrared
+                   IGRINS Spectrum}},
+  volume =        {838},
+  year =          {2017},
+  abstract =      {We present a deep near-infrared spectrum of the Orion
+                   Bar Photodissociation Region (PDR) taken with the
+                   Immersion Grating INfrared Spectrometer (IGRINS) on
+                   the 2.7 m telescope at the McDonald Observatory.
+                   IGRINS has high spectral resolution (R˜ {{45,000}})
+                   and instantaneous broad wavelength coverage
+                   (1.45-2.45 mum), enabling us to detect 87 emission
+                   lines from rovibrationally excited molecular hydrogen
+                   (H2) that arise from transitions out of 69 upper
+                   rovibration levels of the electronic ground state.
+                   These levels cover a large range of rotational and
+                   vibrational quantum numbers and excitation energies,
+                   making them excellent probes of the excitation
+                   mechanisms of H2 and physical conditions within the
+                   PDR. The Orion Bar PDR is thought to consist of
+                   cooler high density clumps or filaments (T=50{--}250
+                   K, {n}H={10}5{--}{10}7 cm-3) embedded in a warmer
+                   lower density medium (T=250{--}1000 K,
+                   {n}H={10}4{--}{10}5 cm-3). We fit a grid of constant
+                   temperature and density Cloudy models, which recreate
+                   the observed H2 level populations well, to constrain
+                   the temperature to a range of 600-650 K and the
+                   density to {n}H=2.5× {10}3{--}{10}4 cm-3. The
+                   best-fit model gives T = 625 K and {n}H=5× {10}3
+                   cm-3. This well-constrained warm temperature is
+                   consistent with kinetic temperatures found by other
+                   studies for the Orion Bar's lower density medium.
+                   However, the range of densities well fit by the model
+                   grid is marginally lower than those reported by other
+                   studies. We could be observing lower density gas than
+                   the surrounding medium, or perhaps a
+                   density-sensitive parameter in our models is not
+                   properly estimated.},
+  doi =           {10.3847/1538-4357/aa5b9f},
+  eid =           {152},
+}
+
 @article{Plambeck2013a,
   author =        {{Plambeck}, R.~L. and {Bolatto}, A.~D. and
                    {Carpenter}, J.~M. and {Eisner}, J.~A. and
