--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -543,7 +543,7 @@ salt lines resembles the `sawtooth' pattern observed for the rovibrational
 populations of \hh toward the Orion bar photodissociation region.  This
 pattern is explained by ultraviolet excitation into higher electronic states,
 followed by decay back to excited vibrational levels in the ground electronic
-state \citep{Kaplan2017}.  \hh rotational populations in the ground vibrational
+state \citep{Kaplan2017a}.  \hh rotational populations in the ground vibrational
 state are thermalized by collisions; UV excitation transposes this pattern into
 higher vibrational states.
 % without the $\Delta v=1$ restriction that applies to infrared excitation.
