--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -792,7 +792,7 @@ AlCl and AlF in our observational bands that were not detected.
 \citet{Cernicharo1987a} detected these lines at a comparable brightness to NaCl
 and KCl in IRC+10216.  The lack of AlCl may be because \sourcei's disk is
 oxygen-rich, and aluminum is locked into AlOH, as suggested in the
-\citet{Cherncheff2012a} model.  Indeed, the tentative detection of AlO
+\citet{Cherchneff2012a} model.  Indeed, the tentative detection of AlO
 in our spectra supports this conclusion.
 
 
