--- a/extracted.bib
+++ b/extracted.bib
@@ -1019,6 +1019,72 @@
                    molecular outflows.},
 }
 
+@article{Cherchneff2012a,
+  author =        {{Cherchneff}, I.},
+  journal =       {\aap},
+  month =         sep,
+  pages =         {A12},
+  title =         {{The inner wind of IRC+10216 revisited: new exotic
+                   chemistry and diagnostic for dust condensation in
+                   carbon stars}},
+  volume =        {545},
+  year =          {2012},
+  abstract =      {Aims: We model the chemistry of the inner wind of the
+                   carbon star IRC+10216 and consider the effects of
+                   periodic shocks induced by the stellar pulsation on
+                   the gas to follow the non-equilibrium chemistry in
+                   the shocked gas layers. We consider a very complete
+                   set of chemical families, including hydrocarbons and
+                   aromatics, hydrides, halogens, and
+                   phosphorous-bearing species. Our derived abundances
+                   are compared to those for the latest observational
+                   data from large surveys and the Herschel telescope.
+                   Methods: A semi-analytical formalism based on
+                   parameterised fluid equations is used to describe the
+                   gas density, velocity, and temperature from 1 R* to 5
+                   R*. The chemistry is described using a chemical
+                   kinetic network of reactions and a set of stiff,
+                   ordinary, coupled differential equations is solved.
+                   Results: The shocks induce an active non-equilibrium
+                   chemistry in the dust formation zone of IRC+10216
+                   where the collision destruction of CO in the
+                   post-shock gas triggers the formation of O-bearing
+                   species such as H2O and SiO. Most of the modelled
+                   molecular abundances agree very well with the latest
+                   values derived from Herschel data on IRC+10216. The
+                   hydrides form a family of abundant species that are
+                   expelled into the intermediate envelope. In
+                   particular, HF traps all the atomic fluorine in the
+                   dust formation zone. The halogens are also abundant
+                   and their chemistry is independent of the C/O ratio
+                   of the star. Therefore, HCl and other Cl-bearing
+                   species should also be present in the inner wind of
+                   O-rich AGB or supergiant stars. We identify a
+                   specific region ranging from 2.5 R* to 4 R*, where
+                   polycyclic aromatic hydrocarbons form and grow. The
+                   estimated carbon dust-to-gas mass ratio derived from
+                   the mass of aromatics formed ranges from 1.2 × 10-3
+                   to 5.8 × 10-3 and agrees well with existing values
+                   deduced from observations. This aromatic formation
+                   region is situated outside hot layers where SiC2 is
+                   produced as a bi-product of silicon carbide dust
+                   synthesis. The MgS grains can form from the gas phase
+                   but in lower quantities than those necessary to
+                   reproduce the strength of the 30 mum emission band.
+                   Finally, we predict that some molecular lines will
+                   show a flux variation with pulsation phase and time
+                   (e.g., H2O), while other species will not (e.g., CO).
+                   These variations merely reflect the non-equilibrium
+                   chemistry that destroys and reforms molecules over a
+                   pulsation period in the shocked gas of the dust
+                   formation zone. Full Table A.1 is only available at
+                   the CDS via anonymous ftp to cdsarc.u-strasbg.fr
+                   (130.79.128.5) or via
+                       http://cdsarc.u-strasbg.fr/viz-bin/qcat?J/A+A/545/A12},
+  doi =           {10.1051/0004-6361/201118542},
+  eid =           {A12},
+}
+
 @article{Bally2017a,
   author =        {{Bally}, J. and {Ginsburg}, A. and {Arce}, H. and
                    {Eisner}, J. and {Youngblood}, A. and {Zapata}, L. and
@@ -1061,6 +1127,49 @@
                    transients in nearby galaxies.},
   doi =           {10.3847/1538-4357/aa5c8b},
   eid =           {60},
+}
+
+@article{Luhman2017a,
+  author =        {{Luhman}, K.~L. and {Robberto}, M. and {Tan}, J.~C. and
+                   {Andersen}, M. and {Giulia Ubeira Gabellini}, M. and
+                   {Manara}, C.~F. and {Platais}, I. and {Ubeda}, L.},
+  journal =       {\apjl},
+  month =         mar,
+  pages =         {L3},
+  title =         {{New Evidence for the Dynamical Decay of a Multiple
+                   System in the Orion Kleinmann-Low Nebula}},
+  volume =        {838},
+  year =          {2017},
+  abstract =      {We have measured astrometry for members of the Orion
+                   Nebula Cluster with images obtained in 2015 with the
+                   Wide Field Camera 3 on board the Hubble Space
+                   Telescope. By comparing those data to previous
+                   measurements with the Near-Infrared Camera and
+                   Multi-Object Spectrometer on Hubble in 1998, we have
+                   discovered that a star in the Kleinmann-Low Nebula,
+                   source x from Lonsdale et al., is moving with an
+                   unusually high proper motion of 29 mas yr-1, which
+                   corresponds to 55 km s-1 at the distance of Orion.
+                   Previous radio observations have found that three
+                   other stars in the Kleinmann-Low Nebula (the
+                   Becklin-Neugebauer object and sources I and n) have
+                   high proper motions (5-14 mas yr-1) and were near a
+                   single location ˜540 years ago, and thus may have
+                   been members of a multiple system that dynamically
+                   decayed. The proper motion of source x is consistent
+                   with ejection from that same location 540 years ago,
+                   which provides strong evidence that the dynamical
+                   decay did occur and that the runaway star BN
+                   originated in the Kleinmann-Low Nebula rather than
+                   the nearby Trapezium cluster. However, our constraint
+                   on the motion of source n is significantly smaller
+                   than the most recent radio measurement, which
+                   indicates that it did not participate in the event
+                   that ejected the other three stars. Based on
+                   observations made with the NASA/ESA Hubble Space
+                   Telescope and the NASA Infrared Telescope Facility.},
+  doi =           {10.3847/2041-8213/aa5ff6},
+  eid =           {L3},
 }
 
 @misc{Ginsburg2018SpectralCube,
