incorporote brett's commants

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -64,9 +64,18 @@ KCl and NaCl have so far been observed toward evolved stars including the carbon
 Majoris \citep{Milam2007a}, the post-AGB star envelope CRL 2688
 \citep{Highberger2003a}, and the AGB star wind around OH 231+4.2
 \citep{Sanchez-Contreras2018a}.  In these sources, they exist only in a limited
-range of radii from the central star.  The limited environments in which these molecules have been
-detected suggests that they only persist in the gas phase for a brief period when
-being ejected from dying stars before being incorporated into dust grains.  This transient gas-phase abundance is analogous to that which makes SiO an excellent tracer of recent shock events: Si is sputtered from grains into the gas phase where it reacts with oxygen to form SiO.  Further reactions rapidly form SiO$_2$, depleting the gas-phase SiO abundance, and making that molecule an indicator of a recent shock \citep{Schilke1997a}.  Thus, if the production pathways, and role of the physical environment on those pathways, can be constrained for NaCl and KCl, the presence of these molecules has the potential to be a powerful tracer of physical conditions and history in a source. 
+range of radii from the central star.  The limited environments in which these
+molecules have been detected suggests that they only persist in the gas phase
+for a brief period when being ejected from dying stars before being
+incorporated into dust grains.
+This transient gas-phase abundance is analogous to that which makes SiO an
+excellent tracer of recent shock events: Si is sputtered from grains into the
+gas phase where it reacts with oxygen to form SiO.  Further reactions rapidly
+form SiO$_2$, depleting the gas-phase SiO abundance, and making that molecule
+an indicator of a recent shock \citep{Schilke1997a}.  Thus, if the production
+pathways, and role of the physical environment on those pathways, can be
+constrained for NaCl and KCl, the presence of these molecules has the potential
+to be a powerful tracer of physical conditions and history in a source. 
 
 % \bam{Did we check w/ Holger here to see where he thought
 % the v=1 for NaCl was seen?  I still can't find a paper w/ it.  It's also
@@ -366,7 +375,19 @@ thermally excited (it shows no sign of masing at any velocity) and traces the
 outflow.  The \mbox{SiO v=5 J=8-7} line, with an upper state energy level of
 8747 K, is also shown.  It clearly traces a smaller radius than the NaCl line,
 but a similar height in the disk.  By contrast, the \mbox{SiO v=0 J=8-7}
-emission starts above the vertical centroid of the NaCl line.  \bam{This reads as a result, not as discussion, as there's no conclusion drawn here.  What does this result tell us?  Seems like we're saying that the production method for SiO and NaCl/KCl probably aren't the same - they aren't co-located, so it's probably not shock/outflow-induced for NaCl/KCl?  This runs contrary to what is said later on in the discussion, however.}
+emission, with $E_U=75$ K, starts above the vertical centroid of the NaCl line.
+These spatial anticorrelations suggest that the difference between the
+molecules' emission patterns is driven mostly by excitation, since the salt
+lines have upper state energy levels intermediate between the SiO v=0 and v=5
+states and trace an intermediate region.
+
+\bam{This reads
+as a result, not as discussion, as there's no conclusion drawn here.  What does
+this result tell us?  Seems like we're saying that the production method for
+SiO and NaCl/KCl probably aren't the same - they aren't co-located, so it's
+probably not shock/outflow-induced for NaCl/KCl?  This runs contrary to what is
+said later on in the discussion, however.}
+\ag{Added a conclusion.}
 
 
 \begin{figure*}[!htp]
@@ -777,8 +798,17 @@ background is the same intensity as the emission lines).
 
 
 In this model, the different morphology of the SiO and NaCl lines in the disk
-and outflow must be driven entirely by excitation, since they should both be
-entirely in the gas phase.   \bam{I can't buy this, actually.  That's a *huge* difference to be due just to excitation.  Perhaps the salts are just depleting out back onto the grains (or reacting away) faster than SiO $\rightarrow$ SiO$_2$?  This is perhaps more probable to me if we work with the oxygen-depleted route, since there's less oxygen to make the SiO$_2$?  This is all just spit-balling, though.}
+and outflow is driven mostly by excitation, since both SiO and the salts are
+in the gas phase.  However, excitation alone cannot explain this difference,
+since there are low-excitation lines of KCl and NaCl observed that do not
+show any vertical extent.  Most likely, the salts are depleting back onto
+grains or reacting and forming other molecules more rapidly than SiO.
+% \bam{I can't buy this, actually.  That's a *huge*
+% difference to be due just to excitation.  Perhaps the salts are just depleting
+% out back onto the grains (or reacting away) faster than SiO $\rightarrow$
+% SiO$_2$?  This is perhaps more probable to me if we work with the
+% oxygen-depleted route, since there's less oxygen to make the SiO$_2$?  This is
+% all just spit-balling, though.}
 % This hypothesis is plausible, since the
 % SiO v=0 J=8-7 transition shown in Figure \ref{fig:sioonnacl} has $A_{8,7} =
 % 2.2030\ee{-3}$ \pers, while the NaCl v=2 J=26-25 transition has $A_{26,25} =
@@ -877,7 +907,12 @@ of the class of high-mass protostars with disks; if the latter, these lines
 and potentially many others can be used to probe the radiation environment of 
 extremely embedded high-mass protostars.  
 
-The detection of these species with substantial population in vibrationally excited states highlights the need for laboratory work to measure such transitions in known astronomical molecular species. Indeed, prior work on vibrational excitation in modeling and assigned vibrationally excited ethyl cyanide in ALMA observations of Orion-KL revealed that even when catalogs for these states are available, they are often incomplete \citep{Fortman2012a}. \bam{The reference is: Fortman et al. 2012 J Mol Spec 280, 11}.
+The detection of these species with substantial population in vibrationally
+excited states highlights the need for laboratory work to measure such
+transitions in known astronomical molecular species. Indeed, prior work on
+vibrational excitation in modeling and assigned vibrationally excited ethyl
+cyanide in ALMA observations of Orion-KL revealed that even when catalogs for
+these states are available, they are often incomplete \citep{Fortman2012a}.
 
 \begin{figure*}[!htp]
 \includegraphics[scale=1,width=3.5in]{figures/KCl_rotational_diagrams.pdf}
